@@ -16,7 +16,7 @@
 #These are the versions of our dependencies (in alphabetical order)
 apacheant.version=1.7.1
 ant-task.version=2.0.10
-checkstyle.version=4.2
+checkstyle.version=5.0
 commons-cli.version=2.0
 commons-codec.version=1.3
 commons-collections.version=3.2.1
